# puls-events-rag

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
data/eval/: questions.jsonl
scripts/: build_index.py  evaluate_rag.py  fetch_data.py  search_test.py
src/api/: app.py  schemas.py
src/data/: openagenda_client.py  preprocessing.py
src/rag/: chain.py  generator.py  prompt.py  retriever.py
src/vectorstore/: chunking.py  event_to_document.py  indexing.py
tests/: test_api.py  test_data.py  test_environment.py  test_rag.py  test_vectorstore.py
