[project]
name = "puls-events-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=5.0.0",
    "faiss-cpu>=1.14.2",
    "fastapi>=0.136.3",
    "langchain>=1.3.2",
    "langchain-community>=0.4.2",
    "langchain-mistralai>=1.1.4",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "ragas<0.3",
    "requests>=2.34.2",
    "uvicorn>=0.48.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
]
